--- a/src/components/About.css
+++ b/src/components/About.css
@@ -51,3 +51,7 @@
   color: #6b8087;
   font-size: large;
 }
+
+.about-text-mobile {
+  color: #6b8087;
+}
