--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,6 +8,11 @@
   width: 100%;
 }
 
+.header-view {
+  display: flex;
+  flex-direction: row;
+}
+
 .header-element {
   font-weight: 500;
   font-size: x-large;
@@ -17,9 +22,35 @@
   padding-bottom: 5px;
   cursor:pointer;
   margin: 20px;
+  transition-duration: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header-element:hover {
   background-color: rgba(255, 0, 0, 0.1);
   border-radius: 10px;
+  transition: background-color 0.4s ease-in-out;
+}
+
+.header-element-mobile {
+  font-weight: 500;
+  font-size: large;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  cursor:pointer;
+  margin: 10px;
+  transition-duration: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-element-mobile:hover {
+  background-color: rgba(255, 0, 0, 0.1);
+  border-radius: 10px;
+  transition: background-color 0.4s ease-in-out;
 }
